...
                VStack {
                    Spacer()
                    HStack {
                        BackButton(action: {
                            dismiss()
                        })
                        .accessibilityIdentifier("harryPotterHousesBackButton")
                        
                        Spacer()
                    }
                    Spacer()
                }
                
...
